Fixed panel transition, anchored collapse button

--- a/public/styles.css
+++ b/public/styles.css
@@ -74,6 +74,7 @@
 }
 
 .collapse-and-info-container {
+  position: relative;
   width: 40%;
   display: flex;
 }
@@ -140,6 +141,7 @@
 }
 
 .overview-expanded-product-info {
+  padding-bottom: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -167,8 +169,8 @@
 }
 
 .overview-styles-container {
-  height: 35%;
   display: inline-flex;
+
 }
 
 .overview-purchase-info {
@@ -255,15 +257,21 @@ img {
 }
 
 .style-object-thumbnail-container {
-  width: 25%;
-  margin-top: auto;
   margin-left: 0;
+  width: 74px;
+  height: 100px;
+  border-radius: 50%;
+  width: 25%;
 }
 
 .collapse-button-container {
   height: 2%;
+  position: absolute;
+  top: 0;
+  right: 0;
   margin-right: 20px;
   margin-top: 15px;
+  z-index: 2;
 }
 
 .thumbnail-scroll-button-up {
@@ -380,7 +388,37 @@ select option:checked {
   background-color: #c4e3ff;
 }
 
+.slide-panel {
+  position: relative;
+  display: inline-block;
+  transition: transform 1.0s ease;
+  transform: translate(102%, 0);
+  z-index: 1
+}
 
+.unslide-panel {
+  position: relative;
+  display: inline-block;
+  transition: transform 1.0s ease;
+  /* transform: translate(-50%, 0); */
+  z-index: 1
+}
+
+
+
+/* .overview-expanded-product-panel-slide {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, 1.0);
+  box-sizing: border-box;
+  z-index: 1;
+  transition: transform 2.0s ease;
+  transform: translate(102%, 0)
+} */
 
 
 /* border: 2px solid #ddd;
